# lego_architecture

./: .env.example  .gitignore  Dockerfile  Dockerfile.gateway  Makefile  README.md  demo-app.html  docker-compose.auth.yml  docker-compose.gateway.yml  docker-compose.yml  gateway-test.html  pyproject.toml  run_gateway.py
contracts/: auth.yaml  gateway.yaml
scripts/: validate-contracts.py
services/auth/: app.py  config.py  requirements.txt
services/auth/adapters/flask/: app.py  error_handlers.py  routes.py
services/auth/adapters/oauth/: github.py  google.py
services/auth/adapters/password/: bcrypt_hasher.py
services/auth/adapters/repository/: init.sql  models.py  user_repository.py
services/auth/adapters/token/: jwt_service.py
services/auth/domain/: __init__.py
services/auth/domain/entities/: __init__.py  user.py
services/auth/domain/ports/: __init__.py  oauth_service.py  password_hasher.py  token_service.py  user_repository.py
services/auth/domain/use_cases/: __init__.py  get_current_user.py  (+5 more)
services/auth/tests/: test_shared.py
services/gateway/: .env.example  app.py  config.py  requirements.txt
services/gateway/middleware/: cors.py  jwt.py  logging.py
services/gateway/router/: proxy.py  routes.py
services/gateway/tests/: conftest.py  test_app.py  test_config.py  test_cors_middleware.py  test_jwt_middleware.py  test_logging_middleware.py  test_proxy.py  test_router.py
shared/python/: setup.py
shared/python/lego_shared/: __init__.py  error_response.py  health.py  jwt_utils.py  logging.py
shared/python/tests/: test_jwt_utils.py
(+12 files in other folders)
